[gd_scene load_steps=3 format=3 uid="uid://bk8kv62gfy171"]

[ext_resource type="Script" path="res://Environment/Room/Room.gd" id="1_slsk6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60xs4"]
size = Vector2(1780, 944)

[node name="Room" type="Node2D"]
script = ExtResource("1_slsk6")

[node name="CameraCenter" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="RoomInside" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomInside"]
position = Vector2(960, 540)
shape = SubResource("RectangleShape2D_60xs4")

[node name="Spawnpoint1" type="Marker2D" parent="."]
position = Vector2(960, 540)

[node name="Spawnpoint2" type="Marker2D" parent="."]
position = Vector2(480, 270)

[node name="Spawnpoint3" type="Marker2D" parent="."]
position = Vector2(1480, 270)

[node name="Spawnpoint4" type="Marker2D" parent="."]
position = Vector2(480, 810)

[node name="Spawnpoint5" type="Marker2D" parent="."]
position = Vector2(1480, 810)

[connection signal="body_entered" from="RoomInside" to="." method="_on_room_inside_body_entered"]
[connection signal="body_exited" from="RoomInside" to="." method="_on_room_inside_body_exited"]
